--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.6",
+    "@stripe/stripe-js": "^7.3.1",
     "@tanstack/react-query": "^5.79.0",
     "date-fns": "^4.1.0",
     "react": "^18.3.1",
